[package]
name = "macro_test"
version = "0.1.0"
authors = ["k <worileqing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro_test_derive = {path="./macro_test_derive"}
cfg-if = "1.0"
[features]
test = ["macro_test_derive/test"]
