[package]
name = "macro_test_derive"
version = "0.1.0"
authors = ["k <worileqing@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["proc-macro"]


[dependencies]
quote = "1.0.7"
syn = { version = "1.0.48", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.24"
cfg-if = "1.0"


[features]
test = []